Fix alignment of remember me

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -179,6 +179,12 @@ input {
   height: auto !important;
 }
 
+.form-check {
+  input[type=checkbox].form-check-input {
+    width: unset;
+  }
+}
+
 #error_explanation {
   color: red;
   ul {
